fix: adjust z-index for calendar icon in TransactionFilter

--- a/src/pages/Transactions/components/TransactionFilter/TransactionFilter.module.css
+++ b/src/pages/Transactions/components/TransactionFilter/TransactionFilter.module.css
@@ -35,7 +35,7 @@
     center;
   background-size: contain;
   pointer-events: none;
-  z-index: 2;
+  z-index: 0;
 }
 
 .from input,
